--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,35 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>	
+		<!-- Model Mapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.0.0</version>
+			<scope>compile</scope>
+		</dependency>			
+		<!-- Commons Apache -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		</dependency>		
+		<dependency>
+		   <groupId>io.rest-assured</groupId>
+		   <artifactId>rest-assured</artifactId>
+		   <scope>test</scope>
+		</dependency>
+		<!-- Java Faker -->
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<scope>test</scope>
+			<version>0.17.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -60,6 +89,9 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+			   <artifactId>maven-failsafe-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
