--- a/src/test/resources/application-integrationtest.yml
+++ b/src/test/resources/application-integrationtest.yml
@@ -1,8 +1,6 @@
 spring:
-  application:
-    name: mini-autorizador-service
   datasource:
-    url: jdbc:h2:mem:autorizadordb
+    url: jdbc:h2:mem:autorizadordb_test
     username: sa
     password: 
   h2:
