--- a/src/test/resources/application-integrationtest.yml
+++ b/src/test/resources/application-integrationtest.yml
@@ -9,3 +9,15 @@ spring:
       path: /h2-console
   jpa:
     show-sql: true
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/autorizadordb_test?&serverTimezone=UTC
+#    username: postgres
+#    password: q1w2e3
+#  jpa:
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: create-drop
+#    properties:
+#      hibernate:
+#      dialect: org.hibernate.dialect.PostgreSQLDialect
