--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,23 +2,26 @@ spring:
   application:
     name: mini-autorizador-service
   datasource:
-    url: jdbc:h2:mem:autorizadordb
-    username: sa
-    password: 
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3307/miniautorizador?useTimezone=true&serverTimezone=UTC
+    username: root
+    password:
   jpa:
     show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+      dialect: org.hibernate.dialect.MySQL57Dialect
+      
+      
 #  datasource:
-#    url: jdbc:postgresql://localhost:5432/autorizadordb?&serverTimezone=UTC
-#    username: postgres
-#    password: changeme
+#    url: jdbc:h2:mem:autorizadordb
+#    username: sa
+#    password: 
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 #  jpa:
 #    show-sql: true
-#    hibernate:
-#      ddl-auto: update
-#    properties:
-#      hibernate:
-#      dialect: org.hibernate.dialect.PostgreSQLDialect
