--- a/src/test/resources/application-integrationtest.yml
+++ b/src/test/resources/application-integrationtest.yml
@@ -1,23 +1,27 @@
 spring:
+  application:
+    name: mini-autorizador-service
   datasource:
-    url: jdbc:h2:mem:autorizadordb_test
-    username: sa
-    password: 
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3307/miniautorizador_test?createDatabaseIfNotExist=true&serverTimezone=UTC
+    username: root
+    password:
   jpa:
     show-sql: true
-#spring:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+      dialect: org.hibernate.dialect.MySQL57Dialect
+
+
 #  datasource:
-#    url: jdbc:postgresql://localhost:5432/autorizadordb_test?&serverTimezone=UTC
-#    username: postgres
-#    password: q1w2e3
+#    url: jdbc:h2:mem:autorizadordb_test
+#    username: sa
+#    password: 
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 #  jpa:
 #    show-sql: true
-#    hibernate:
-#      ddl-auto: create-drop
-#    properties:
-#      hibernate:
-#      dialect: org.hibernate.dialect.PostgreSQLDialect
